Invalid workflow file

--- a/.github/workflows/autoDeploy.yml
+++ b/.github/workflows/autoDeploy.yml
@@ -14,7 +14,7 @@ jobs:
           with:
             ref: main
 
-      - name: 安装 Node.js 16.x
+      - name: '安装 Node.js 16.x'
         uses: actions/setup-node@v2
         with:
           node-version: '16'
