--- a/.github/workflows/autoDeploy.yml
+++ b/.github/workflows/autoDeploy.yml
@@ -10,11 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 检查分支
-          uses: actions/checkout@v2
-          with:
-            ref: main
+        uses: actions/checkout@v2
+        with:
+          ref: main
 
-      - name: '安装 Node.js 16.x'
+      - name: 安装 Node.js 16.x
         uses: actions/setup-node@v2
         with:
           node-version: '16'
