Invalid workflow file

--- a/.github/workflows/autoDeploy.yml
+++ b/.github/workflows/autoDeploy.yml
@@ -6,16 +6,16 @@ on:
       - main
 
 jobs:
-  checkout:
+  autoDeploy:
     runs-on: ubuntu-latest
     steps:
       - name: 检查分支
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           ref: main
 
       - name: 安装 Node.js 16.x
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '16'
 
@@ -25,11 +25,11 @@ jobs:
           npm install hexo-cli -g
 
       - name: 缓存 NPM 依赖
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: cache
         with:
           path: node_modules
-          # key: ${{runner.OS}}-${{hashFiles('**/package-lock.json')}}
+          # key: ${{ runner.OS }}-${{ hashFiles('**/package-lock.json') }}
           key: ${{ runner.OS }}-npm-cache
           restore-keys: |
             ${{ runner.OS }}-npm-cache
