--- a/.github/workflows/autoDeploy.yml
+++ b/.github/workflows/autoDeploy.yml
@@ -29,10 +29,10 @@ jobs:
         id: cache
         with:
           path: node_modules
-          # key: ${{ runner.OS }}-${{ hashFiles('**/package-lock.json') }}
-          key: ${{ runner.OS }}-npm-cache
-          restore-keys: |
-            ${{ runner.OS }}-npm-cache
+          key: ${{ runner.OS }}-${{ hashFiles('**/package-lock.json') }}
+          # key: ${{ runner.OS }}-npm-cache
+          # restore-keys: |
+          #   ${{ runner.OS }}-npm-cache
 
       - name: 安装依赖
         if: steps.cache.outputs.cache-hit != 'true'
